Fixed the center align for currency converter

--- a/portfolio/src/components/Projects/ProjectCard.module.css
+++ b/portfolio/src/components/Projects/ProjectCard.module.css
@@ -11,6 +11,7 @@
 }
 
 .image {
+  height: 225px;
   margin-bottom: 26px;
 }
 
@@ -30,17 +31,21 @@
   letter-spacing: 1.5px; 
   text-shadow: 2px 2px 4px #bfb9b933; 
   transition: color 0.3s ease, transform 0.3s ease; 
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .title:hover {
-  color: #35045d; 
+  color: #270c80; 
   transform: scale(1.05); 
+  cursor:grab;
 }
 
 .description {
   margin-top: 6px;
   font-size: 22px;
   font-weight: 400;
+  margin-bottom: 15px;
 }
 
 .skills {
@@ -51,6 +56,7 @@
   flex-wrap: wrap;
   gap: 6px;
   list-style: none;
+  margin-bottom: 10px;
 }
 
 .skill {
